--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,97 @@
-.box-dieuBietOn {
-    width: 1120px;
-    margin: 0 auto;
-    text-align: center;
+.box {
+    width: 100%;
+    height: 100vh;
 }
 
-.c {
-    width: 100px;
+.dbo-box {
+    height: 100%;
     margin: 0 auto;
-    height: 100px;
-    background-color: red;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dbo-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.form-dbo {
+    position: absolute;
+    top: 5%;
+    left: 70%;
+    width: 190px;
+}
+
+.form-select {
+    flex: 2;
+}
+
+.date-btn {
+    flex: 1;
+}
+
+.dbo-circle {
+    width: 120px;
+    height: 120px;
+    border: 1px solid #333;
     border-radius: 50%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    z-index: 1;
+    transform: translateY(18px);
+}
+
+.circle-title {
+    width: 100px;
+    text-align: center;
+    font-size: 18px;
+    line-height: 27px;
+}
+
+.dbo-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 0;
+}
+
+.dbo-item {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(0%, -50%);
+    transform-origin: left center;
+    width: 310px;
+    text-align: right;
+    border-bottom: 1px solid #333;
+    height: 26px;
+    overflow: hidden;
+}
+
+.flip-dbo-item {
+    transform: scale(-1);
+    text-align: left;
+}
+
+.dbo-decrise {
+    text-decoration: none;
+    display: inline-block;
+    width: 200px;
+    line-height: 26px;
+    max-height: 26px;
+    color:#333;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.dbo-list {
+    list-style: none;
 }
