--- a/css/header.css
+++ b/css/header.css
@@ -11,16 +11,18 @@ html {
     width: 100%;
     height: 200vh;
 }
+
 header {
     background-color: gray;
     width: 100%;
-    height: 80px;
+    height: 90px;
     display: flex;
     align-items: center;
 }
-#logo{
-    width: 20%;
-    margin-right: 10px;
+.logo-img {
+    width: 70px; 
+    height: 70px;
+    border-radius:50%;
 }
 .search{
     width: 60%;
@@ -40,7 +42,6 @@ header {
 
 #logo:hover,
 #icon-user:hover{
-    transform: scale(1.2);
     cursor: pointer; 
 }
 /*------------------*/
@@ -106,11 +107,12 @@ nav a{
     color: white;
 }
 nav a:hover{
-    color: aqua;
+    color: #fff;
 }
 nav div:hover{
-    transform: scale(1.1);
+    background-color: #918383;
     cursor: pointer; 
+    transition: all 0.3s;
 }
 
 .bt{
